--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.18"
+    "less": "^4.4.1",
+    "vue": "^3.5.18",
+    "vue-router": "4"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
+    "@yike-design/resolver": "^0.0.3",
+    "@yike-design/ui": "^0.0.21",
     "typescript": "~5.8.3",
+    "unplugin-auto-import": "^20.1.0",
+    "unplugin-vue-components": "^29.0.0",
     "vite": "^7.1.2",
     "vue-tsc": "^3.0.5"
   }
