--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vue/tsconfig": "^0.7.0",
     "@yike-design/resolver": "^0.0.3",
     "@yike-design/ui": "^0.0.21",
+    "mockjs": "^1.1.0",
     "typescript": "~5.8.3",
     "unplugin-auto-import": "^20.1.0",
     "unplugin-vue-components": "^29.0.0",
