--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/mockjs": "^1.0.10",
     "@types/node": "^24.3.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
