--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vue/tsconfig": "^0.7.0",
     "@yike-design/resolver": "^0.0.3",
     "@yike-design/ui": "^0.0.21",
+    "echarts": "^6.0.0",
     "mockjs": "^1.1.0",
     "typescript": "~5.8.3",
     "unplugin-auto-import": "^20.1.0",
