--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@yike-design/ui": "^0.0.21",
     "echarts": "^6.0.0",
     "mockjs": "^1.1.0",
+    "pinia": "^3.0.3",
     "typescript": "~5.8.3",
     "unplugin-auto-import": "^20.1.0",
     "unplugin-vue-components": "^29.0.0",
